--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,12 +61,21 @@ jobs:
         run: |
           pytest -m "ui" --alluredir=allure-results || true
 
-      - name: Generate Allure report
-        uses: simple-elf/allure-report-with-history@v1.13
+      - name: Install Allure CLI
         if: always()
-        with:
-          allure_results: 'allure-results'
-          gh_pages: 'gh-pages'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y default-jdk
+          ALLURE_VERSION=2.24.0
+          curl -o allure-${ALLURE_VERSION}.tgz -Ls https://github.com/allure-framework/allure2/releases/download/${ALLURE_VERSION}/allure-${ALLURE_VERSION}.tgz
+          sudo tar -zxvf allure-${ALLURE_VERSION}.tgz -C /opt/
+          sudo ln -sf /opt/allure-${ALLURE_VERSION}/bin/allure /usr/local/bin/allure
+          allure --version
+
+      - name: Generate Allure report
+        if: always()
+        run: |
+          allure generate allure-results --clean -o allure-report || echo "No test results to generate report"
 
       - name: Upload Allure report artifact
         if: always()
@@ -74,6 +83,7 @@ jobs:
         with:
           name: allure-report
           path: allure-report
+          retention-days: 30
 
       - name: Upload raw Allure results
         if: always()
