--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ on:
 permissions:
   contents: read
   actions: write
+  pages: write
+  id-token: write
 
 jobs:
   test:
@@ -43,8 +45,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Install Playwright browsers
-        run: playwright install --with-deps
+      - name: Install Playwright Firefox only
+        run: playwright install firefox --with-deps
 
       - name: Run API tests
         if: ${{ github.event_name == 'workflow_dispatch' && (github.event.inputs.test_type == 'api' || github.event.inputs.test_type == 'both') || github.event_name != 'workflow_dispatch' }}
@@ -92,3 +94,38 @@ jobs:
         with:
           name: allure-results
           path: allure-results
+
+      - name: Deploy Allure report to GitHub Pages
+        if: always() && github.ref == 'refs/heads/main'
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
+          cname: false
+
+      - name: Add workflow summary with report link
+        if: always()
+        run: |
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            echo "## 📊 Allure Test Report" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "View the report: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/allure-report/index.html" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "Report is also available as an artifact in the workflow summary." >> $GITHUB_STEP_SUMMARY
+          else
+            echo "## 📊 Allure Test Report" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "Report is available as an artifact in the workflow summary. Download and open \`index.html\` to view." >> $GITHUB_STEP_SUMMARY
+          fi
+
+      - name: Comment PR with Allure Report info
+        if: always() && github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `## 📊 Allure Test Report\n\nAllure report is available as an artifact. Download the \`allure-report\` artifact and open \`index.html\` to view.\n\n**Note:** To view reports as HTML directly in GitHub Actions, enable GitHub Pages in repository settings.`
+            });
