--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,11 @@ on:
           - both
 
 permissions:
-  contents: read
+  contents: write
   actions: write
   pages: write
   id-token: write
+  pull-requests: write
 
 jobs:
   test:
@@ -95,13 +96,22 @@ jobs:
           name: allure-results
           path: allure-results
 
-      - name: Deploy Allure report to GitHub Pages
+      - name: Setup Pages
         if: always() && github.ref == 'refs/heads/main'
-        uses: peaceiris/actions-gh-pages@v3
+        uses: actions/configure-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./allure-report
-          cname: false
+          static_site_generator: none
+
+      - name: Upload Allure report to Pages
+        if: always() && github.ref == 'refs/heads/main'
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./allure-report
+
+      - name: Deploy to GitHub Pages
+        if: always() && github.ref == 'refs/heads/main'
+        id: deployment
+        uses: actions/deploy-pages@v4
 
       - name: Add workflow summary with report link
         if: always()
@@ -109,7 +119,8 @@ jobs:
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
             echo "## 📊 Allure Test Report" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
-            echo "View the report: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/allure-report/index.html" >> $GITHUB_STEP_SUMMARY
+            REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2)
+            echo "View the report: https://${{ github.repository_owner }}.github.io/${REPO_NAME}/index.html" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "Report is also available as an artifact in the workflow summary." >> $GITHUB_STEP_SUMMARY
           else
